add and change some photos

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Town of Valier - Montana</title>
+  <title>City of Shelby - Montana</title>
   <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW" > 
   <%= stylesheet_link_tag 'reset', 'grid', 'style' %>
   
@@ -54,13 +54,13 @@
 						<div class="wrapper">
 							<div class="grid_24">
 							<ul id="footer_menu">
-								<li><a href="#">Town of Valier</a></li>
+								<li><a href="#">City of Shelby</a></li>
 								<li><a href="#">Town Council</a></li>
 								<li><a href="#">Our Staff </a></li>
 								<li><a href="#">Recreation</a></li>
 								<li class="bg_none"><a href="#">Contact us</a></li>
 							</ul>
-							town of valier &copy; 2011 <br>
+							city of shelby &copy; 2011 <br>
 							<!-- {%FOOTER_LINK} -->
 							</div>
 						</div>
