change some text

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -5,7 +5,7 @@
 					<img src="images/hay.png" alt="">
 					<img src="images/horse.png" alt="">
 					<img src="images/golf.png" alt="">
-					<img src="images/family.jpg" alt="">
+					<img src="images/family.png" alt="">
 				</div>
 			</div>
 		</div>
@@ -15,7 +15,7 @@
 					<article class="grid_8">
 						<h2>welcome!</h2>
 						<p class="font1">The City of Shelby<br>
-is a small town living at its best. With great people, fun activities and a strong sense of community you can't go wrong.</p>
+is small town living at its best. With great people, fun activities and a strong sense of community.</p>
 					</article>
 					<article class="grid_8">
 						<div class="pad_left1 pad_right1">
